# Horticalc

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_golden.bat  run_golden.sh  start_dev.bat
api/: app.py
data/: fertilizers.csv  molar_masses.yml
data/nutrient_solutions/: Bugbee_Utah_Hydroponic_Cannabis_2022.yml  Hoagland_Arnon_1950_Solution1_Nitrate.yml  Hoagland_Arnon_1950_Solution2_AmmoniumPhosphate.yml  Knop_1861_Standard.yml  Long_Ashton_Nutrient_Solution_LANS_NitrateType.yml  Murashige_Skoog_MS_1962_FullStrength.yml  Yoshida_Rice_Solution_1976_CommonVariant.yml
data/water_profiles/: default.yml
docs/: AGENTS.md  EC.md  ECPLANUNG.txt  GUI.MD  Speciation.md  feature_frontend_table_layout.md  feature_hco3_ion_balance.md  feature_osmosis_mix.md  feature_regression_tests.md  golden_example_output.txt  hco3.md  terminology_style_guide.md
frontend/: app.js  index.html  styles.css
recipes/: default.yml  golden.yml  green_go_12_12_36.yml  solve_golden.yml
reference/: düngerrechner 2024_v2.8 _ Mutter Früheveg 8-3-6 ec 1.35 .xlsx
solutions/: golden_output.json  green_go_12_12_36_output.json
src/horticalc/: __main__.py  core.py  data_io.py  ec.py  ec_validation.py  metrics.py  sluijsmann.py  solver.py  speciation.py
tests/: test_ec.py  test_sluijsmann.py  test_solver_golden.py  test_solver_overshoot.py  test_solver_weighting.py
