[project]
name = "horticalc"
version = "0.1.0"
description = "Horticalc (molar-correct) – CSV/YAML Backend statt Excel"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26.0",
]

[project.scripts]
horticalc = "horticalc.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
